--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.1</version>
+    <version>2.5.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.curso.microservicios.app.examenes</groupId>
@@ -16,12 +16,26 @@
   <description>Demo project for Spring Boot</description>
   <properties>
     <java.version>11</java.version>
-    <spring-cloud.version>2021.0.0</spring-cloud.version>
+    <spring-cloud.version>2020.0.4</spring-cloud.version>
   </properties>
   <dependencies>
     <dependency>
+      <groupId>com.curso.microservicios.commons</groupId>
+      <artifactId>commons-microservicios</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.curso.microservicios.commons.examenes</groupId>
+      <artifactId>commons-examenes</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -66,6 +80,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.5.5</version>
       </plugin>
     </plugins>
   </build>
